# valkyrie-connect-auto

./: .gitignore  .pylintrc  LICENSE  README.md  cute.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: build.yml
valkyrie_connect_auto/: __init__.py  auto.py  crystal.py  dragon.py  event.py  summon.py  window.py
valkyrie_connect_auto/commands/: click.py  crystal.py  dragon.py  event.py  summon.py
