[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "valkyrie-connect-auto"
version = "0.1.0"
description = "A tool to automate Valkyrie Connect"
authors = [{name = "eight", email = "eight04@gmail.com"}]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Traditional)",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Programming Language :: Python :: 3.12",
]
keywords = []
license = {text = "MIT"}
readme = "README.md"
urls = {Homepage = "https://github.com/eight04/valkyrie-connect-auto"}
dependencies = ["PyAutoGUI~=0.9.54", "opencv-python~=4.10", "pillow~=11.0", "pytesseract~=0.3.13", "pywin32>=308"]

[project.scripts]
valkyrie-connect-auto = "valkyrie_connect_auto:cli"

[tool.vpip]
command_fallback = "python cute.py"
